--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,22 @@ jq = ["jq~=1.6"]
 notes = ["beautifulsoup4~=4.12", "lxml~=5.1"]
 video = ["yt_dlp>=2023.12.30"]
 all = ["tumblr-backup[exif,jq,notes,video]"]
+dev = [
+    "tumblr-backup[all]",
+
+    # dev tools
+    "flake8~=7.0",
+    "mypy~=1.9",
+    "pytype>=2024.2.27",
+    "wemake-python-styleguide~=0.18",
+
+    # type stubs and other optional modules
+    "lxml-stubs~=0.5",
+    "pysocks~=1.7",
+    "types-beautifulsoup4~=4.12",
+    "types-requests~=2.31",
+    "youtube_dl>=2021.12.17",
+]
 
 [project.urls]
 "Homepage" = "https://github.com/cebtenzzre/tumblr-utils"
@@ -41,3 +57,36 @@ tb-login = "tumblr_backup.login:main"
 [build-system]
 requires = ["setuptools>=43.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
+
+[tool.mypy]
+files = 'tumblr_backup'
+pretty = true
+strict = true
+warn_unused_ignores = false
+allow_untyped_calls = true
+warn_return_any = false
+allow_subclassing_any = true
+allow_untyped_defs = true
+allow_incomplete_defs = true
+disable_error_code = ['import-untyped']
+
+[tool.pytype]
+inputs = ['tumblr_backup']
+jobs = 'auto'
+bind_decorated_methods = true
+none_is_not_bool = true
+overriding_renamed_parameter_count_checks = true
+strict_none_binding = true
+precise_return = true
+# protocols:
+# - https://github.com/google/pytype/issues/1423
+# - https://github.com/google/pytype/issues/1424
+# strict_import: https://github.com/google/pytype/issues/1444
+# strict_parameter_checks: https://github.com/google/pytype/issues/365
+strict_primitive_comparisons = true
+# strict_undefined_checks: too many false positives
+
+[tool.isort]
+src_paths = ['tumblr_backup']
+line_length = 120
+combine_as_imports = true
